templates/acp_template.yaml
---
# Source: acp/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-acp
  labels:
    helm.sh/chart: acp-2.21.0
    app.kubernetes.io/name: acp
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "2.21.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 8443
      targetPort: http
      protocol: TCP
      name: http
    - port: 9000
      targetPort: metrics
      protocol: TCP
      name: metrics
    - port: 9443
      targetPort: grpc
      protocol: TCP
      name: grpc
  selector:
    app.kubernetes.io/name: acp
    app.kubernetes.io/instance: release-name
---
# Source: acp/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-acp
  labels:
    helm.sh/chart: acp-2.21.0
    app.kubernetes.io/name: acp
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "2.21.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: acp
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: acp
        app.kubernetes.io/instance: release-name
    spec:
      imagePullSecrets:
        - name: docker.cloudentity.io
      volumes:
        - name: data
          configMap:
            name: release-name-acp
        - name: tls
          projected:
            defaultMode: 384
            sources:
            - secret:
                name: release-name-acp-tls
        - name: secret
          secret:
            secretName: release-name-acp
      serviceAccountName: release-name-acp
      securityContext:
        fsGroup: 65535
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: acp
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 65535
            runAsNonRoot: true
            runAsUser: 65535
          image: "docker.cloudentity.io/acp-distroless:2.21.0"
          imagePullPolicy: IfNotPresent
          args:
            - server
            - start
            - --demo
            - --metrics
            - --create-default-tenant
            - --create-default-workspaces
            - --config
            - /data/config.yaml,/data/extraconfig.yaml,/secret/config.yaml
            
          ports:
            - name: http
              containerPort: 8443
              protocol: TCP
            - name: metrics
              containerPort: 9000
              protocol: TCP
            - name: grpc
              containerPort: 9443
              protocol: TCP
          startupProbe:
            httpGet:
              path: /alive
              scheme: HTTPS
              port: 8443
            failureThreshold: 10
            periodSeconds: 10
            timeoutSeconds: 10
          readinessProbe:
            httpGet:
              path: /alive
              scheme: HTTPS
              port: 8443
            initialDelaySeconds: 5
            failureThreshold: 3
            periodSeconds: 10
            timeoutSeconds: 10
          livenessProbe:
            httpGet:
              path: /alive
              scheme: HTTPS
              port: 8443
            initialDelaySeconds: 3
            failureThreshold: 10
            periodSeconds: 10
            timeoutSeconds: 10
          volumeMounts:
            - mountPath: /data
              name: data
              readOnly: true
            - mountPath: /tls
              name: tls
              readOnly: true
            - mountPath: /secret
              name: secret
              readOnly: true
          resources:
            {}
---
# Source: acp/templates/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: release-name-acp
  labels:
    helm.sh/chart: acp-2.21.0
    app.kubernetes.io/name: acp
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "2.21.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "8k"
    nginx.ingress.kubernetes.io/proxy-ssl-ciphers: "EECDH+AESGCM:EDH+AESGCM"
    nginx.ingress.kubernetes.io/proxy-ssl-protocols: "TLSv1.2"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-ssl-secret: "default/release-name-acp-tls"
    nginx.ingress.kubernetes.io/proxy-ssl-server-name: "on"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-ciphers: "EECDH+AESGCM:EDH+AESGCM"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header X-SSL-CERT "";
    nginx.ingress.kubernetes.io/enable-modsecurity: "true"
    nginx.ingress.kubernetes.io/enable-owasp-core-rules: "true"
    nginx.ingress.kubernetes.io/service-upstream: "true"
spec:
  rules:
    - host: "acp.local"
      http:
        paths:
          - path: /
            backend:
              serviceName: release-name-acp
              servicePort: 8443
---
# Source: acp/templates/tls-secrets.yaml
---
---
# Source: acp/templates/tests/get-access-token.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "release-name-access-token-test"
  annotations:
    "helm.sh/hook": test
spec:
  containers:
    - name: release-name-access-token-test
      image: curlimages/curl
      args: 
        - --insecure
        - --request
        - POST
        - --data
        - grant_type=client_credentials
        - --user
        - system:5c8f3f5b353ba0f55c8f3f5b353ba0f5
        - https://acp.local:8443/system/system/oauth2/token
  restartPolicy: Never
